--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   src: url("./fonts/BaileySignature-WpAMG.ttf") format("truetype");
 }
 body {
-  background-color: white;
+  background-color: #eaedee;
   color: black;
   font-family: Verdana;
 }
@@ -15,4 +15,14 @@ body {
   font-family: 'BaileySignature', sans-serif;
   font-size: 100px;
   color:rgb(52, 83, 130);
+}
+
+.post-card {
+  height: 300px;
+  background-color: white;
+}
+
+.post-title {
+  font: bold 24px/1.4 'Garamond', serif;
+  color:rgb(36, 92, 153);
 }
