--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* CSS is how you can add style to your website, such as colors, fonts, and positioning of your
-   HTML content. To learn how to do something, just try searching Google for questions like
-   "how to change link color." */
 @font-face{
   font-family: "BaileySignature";
   src: url("./fonts/BaileySignature-WpAMG.ttf") format("truetype");
@@ -13,7 +10,6 @@ body {
 
 .title {
   font-family: 'BaileySignature', sans-serif;
-  font-size: 100px;
   color:rgb(52, 83, 130);
 }
 
@@ -24,5 +20,5 @@ body {
 
 .post-title {
   font: bold 24px/1.4 'Garamond', serif;
-  color:rgb(36, 92, 153);
+  color: #08315c
 }
