--- a/site/components/header/header-component.html
+++ b/site/components/header/header-component.html
@@ -4,8 +4,8 @@
       <nav class="bg-white shadow-sm rounded-xl px-8 py-3">
         <ul class="flex space-x-8 text-gray-800 text-lg font-medium">
           <li><a href="/" class="hover:text-blue-link transition">Inicio</a></li>
-          <li><a href="#" class="hover:text-blue-link transition">Listado</a></li>
-          <li><a href="#" class="hover:text-blue-link transition">Acerca de</a></li>
+          <li><a href="/list.html" class="hover:text-blue-link transition">Listado</a></li>
+          <li><a href="/about.html" class="hover:text-blue-link transition">Acerca de</a></li>
         </ul>
       </nav>
     </div>
