POC fondo multicolor

--- a/site/style.css
+++ b/site/style.css
@@ -4,9 +4,19 @@
 }
 
 body {
-  background-color: #eaedee;
+  /* background-color: #eaedee; */
   color: black;
   font-family: 'Tahoma', sans-serif;
+  background: linear-gradient(
+  45deg,
+  #f3e5f5,
+  #ffe0e0, #e8f5e9,
+  #e8f5e9, #e3f2fd,
+  #e3f2fd, #e3f2fd,
+   #e3f2fd, #e3f2fd,
+  #fffde7, #fffde7
+  
+);
 }
 
 .title {
