--- a/site/components/header/header-component.html
+++ b/site/components/header/header-component.html
@@ -1,9 +1,9 @@
 <header class="py-6 text-center">
-    <h1 class="title text-7xl md:text-8xl"><a href="/index.html">Arashi no naka de</a></h1>
+    <h1 class="title text-7xl md:text-8xl"><a href="/">Arashi no naka de</a></h1>
     <div class="inset-x-0 flex justify-center mt-6">
       <nav class="bg-white shadow-sm rounded-xl px-8 py-3">
         <ul class="flex space-x-8 text-gray-800 text-lg font-medium">
-          <li><a href="/index.html" class="hover:text-blue-link transition">Inicio</a></li>
+          <li><a href="/" class="hover:text-blue-link transition">Inicio</a></li>
           <li><a href="/list.html" class="hover:text-blue-link transition">Todas las letras</a></li>
           <li><a href="/about.html" class="hover:text-blue-link transition">Acerca de</a></li>
         </ul>
